# poltergohst

./: .gitignore  .golangci.yml  CONTRIBUTING.md  CONVERSION_SUMMARY.md  Dockerfile  LICENSE  Makefile  PACKAGE_MIGRATION.md  README.md  consolidate_packages.sh  docker-compose.yml  go.mod  go.sum  poltergeist-ts.md  poltergeist.example.json  tools.go
.github/workflows/: ci.yml
docs/: CONFIGURATION.md  GO_IDIOMS_IMPROVEMENTS.md  IMPROVEMENT_PLAN.md  REFACTORING_SUMMARY.md  STRUCTURAL_REFACTORING_COMPLETE.md  idiomatic-go.md
examples/: README.md  cmake-executable.poltergeist.config.json  cmake-library.poltergeist.config.json  cmake-multi-target.poltergeist.config.json  docker-dev.poltergeist.config.json  golang.poltergeist.config.json  mixed-project.poltergeist.config.json  nodejs.poltergeist.config.json  poltergeist.config.example.json  python.poltergeist.config.json  run-all-examples.sh  rust.poltergeist.config.json  spine-c-compact.config.json  swift-spm.poltergeist.config.json  watchman_example.go
examples/c-hello/: .gitignore  Makefile  expected-output.txt  main.c
examples/cmake-library/: .gitignore  CMakeLists.txt  expected-output.txt
examples/cmake-library/include/: math_ops.h
examples/cmake-library/src/: math_ops.c
examples/cmake-library/test/: test_math.c
examples/node-typescript/: .gitignore  expected-output.txt  package-lock.json  package.json
internal/builders/: advanced_test.go.skip  base.go  builders_test.go  factory.go
internal/engine/: context.go  context_utils.go  engine.go  factory.go  interfaces.go  queue.go  (+7 more)
test/: integration_test.go
(+69 files in other folders)
